--- a/learning2code/Section 5 - HTML Intermediate/index.html
+++ b/learning2code/Section 5 - HTML Intermediate/index.html
@@ -12,13 +12,12 @@
       <h1>I'm Jamie.</h1>
       <h2>A web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="Cloud Image">
-      <img src="images/mountain.png" alt="Mountain Image">
     </div>
     <div class="middle-container">
       <div class="profile">
         <img class="profileimage" src="images/profileimage.jpg" alt="Profile picture of Jamie">
         <h3>Hello.</h3>
-        <p class="intro">I am a Web and iOS Developer. I have founded Gamers Apparel, District Print and WuuHuu where I also developed the applications for these companies.</p>
+        <p class="intro">I am the founder of three small businesses; Gamers Apparel, District Print and WuuHuu, with a deep passion for Web / App Development.</p>
       </div>
       <hr>
       <div class="skills">
