--- a/learning2code/Section 6 - Bootstrap/bootstrap-nav/index.html
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-nav/index.html
@@ -11,7 +11,33 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="#" class="navbar-brand">JamieCodes</a>
+      <form class="form-inline ml-auto">
+        <div class="input-group">
+        <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+    </form>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class="navbar-nav ml-auto">
+        <li class="navitem">
+          <a class="nav-link" href="#">Contact Me</a>
+        </li>
+        <li class="navitem">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="navitem">
+          <a class="nav-link" href="#">Download</a>
+        </li>
+      </ul>
+    </div>
+    </nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
