--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
@@ -4,8 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Ubuntu:400,700&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/37820ecc8b.js" crossorigin="anonymous"></script>
+  
+  <!-- Master CSS -->
   <link rel="stylesheet" href="css/master.css">
 </head>
 
@@ -14,6 +22,7 @@
   <section id="title">
 
     <!-- Nav Bar -->
+
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">Tindoge</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,8 +49,8 @@
     <div class="row">
       <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
       </div>
       <div class="col-lg-6">
       <img src="images/iphone6.png" alt="iphone-mockup">
