--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <section id="title">
-
+    <div class="container-fluid">
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -56,6 +56,8 @@
       <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
+
+  </div>
 
   </section>
 
