--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/index.html
@@ -142,6 +142,7 @@
           <p>5 Matches Per Day</p>
           <p>10 Messages Per Day</p>
           <p>Unlimited App Usage</p>
+          <p>&nbsp;</p>
           <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
         </div>
 
@@ -160,6 +161,7 @@
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
           <p>Unlimited App Usage</p>
+          <p>&nbsp;</p>
           <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
         </div>
 
